[P3] Phase 3 회고 작성 — Phase 3 종료
- 회고(블로그용): 에러율 0%로 죽는 장애, JDBC+R2DBC 공존 함정 4종, "Netty가 이기는 조건"
- README 진행 표·CLAUDE.md 현재 상태 갱신 (다음: Phase 4 GC/tcpdump)

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>